Source/WebCore/html/HTMLAnchorElement.cpp
@@ -403,7 +403,10 @@ void HTMLAnchorElement::setPathname(const String& value)
 
 String HTMLAnchorElement::port() const
 {
-    return String::number(href().port());
+    if (href().hasPort())
+        return String::number(href().port());
+
+    return emptyString();
 }
 
 void HTMLAnchorElement::setPort(const String& value)
