Source/WebCore/page/Location.cpp
@@ -86,7 +86,7 @@ String Location::host() const
     // Note: this is the IE spec. The NS spec swaps the two, it says
     // "The hostname property is the concatenation of the host and port properties, separated by a colon."
     const KURL& url = this->url();
-    return url.port() ? url.host() + ":" + String::number(url.port()) : url.host();
+    return url.hasPort() ? url.host() + ":" + String::number(url.port()) : url.host();
 }
 
 String Location::hostname() const
@@ -103,7 +103,7 @@ String Location::port() const
         return String();
 
     const KURL& url = this->url();
-    return url.port() ? String::number(url.port()) : "";
+    return url.hasPort() ? String::number(url.port()) : "";
 }
 
 String Location::pathname() const
@@ -203,7 +203,7 @@ void Location::setPort(const String& portString, DOMWindow* activeWindow, DOMWin
         return;
     KURL url = m_frame->document()->url();
     int port = portString.toInt();
-    if (port < 0 || port > 0xFFFF)
+    if (port < 0 || port > 0xFFFF || portString.isEmpty())
         url.removePort();
     else
         url.setPort(port);
